<resources>
    <string name="open_drawer">Open drawer</string>
    <string name="try_again">Try again</string>
    <string name="can_not_work_without_file_permission">Application can not work without file permission</string>
    <string name="close">Close</string>
    <string name="library">Library</string>
    <string name="settings">Settings</string>
    <string name="internal_app_error">Internal app error</string>
    <string name="unexpected_error">Error: %s</string>
    <string name="file_not_found">File not found</string>
    <string name="compositions_on_device_not_found">No songs found on the device</string>
    <string name="compositions_and_folders_for_search_not_found">Songs and folders matching search results not found</string>
    <string name="foreground_channel_name">Foreground player notification</string>
    <string name="previous_track">Previous track</string>
    <string name="next_track">Next track</string>
    <string name="folder">Folder</string>
    <string name="content_description_menu">Open current song menu</string>
    <string name="content_description_menu_template">Open song menu: %s</string>
    <string name="share">Send</string>
    <string name="content_description_repeat_mode">Repeat mode menu</string>
    <string name="content_description_shuffle">Shuffle mode</string>
    <string name="unknown_author">Unknown author</string>
    <string name="delete">Delete</string>
    <string name="delete_folder">Delete folder</string>
    <string name="add_date_order">By date of addition</string>
    <string name="order">Sorting</string>
    <string name="folders">Folders</string>
    <string name="compositions">Songs</string>
    <string name="play_lists">Playlists</string>
    <string name="play_lists_on_device_not_found">No playlists found on the device</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="create_playlist">Create playlist</string>
    <string name="create_playlist_error_template">Can not create playlist: %1$s</string>
    <string name="change_playlist_name_error_template">Can not change playlist name: %1$s</string>
    <string name="name_can_not_be_empty">name can not be empty</string>
    <string name="create_progress">Creating…</string>
    <string name="play_list_with_this_name_already_exists">playlist with this name already exists</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="select_play_list">Select playlist</string>
    <string name="add_to_playlist_error_template">Can not add song to playlist: %1$s</string>
    <string name="delete_composition_error_template">Can not delete song: %1$s</string>
    <string name="add_to_playlist_success_template">Song \"%1$s\" added to playlist \"%2$s\"</string>
    <string name="save_as_play_list">Save as playlist</string>
    <string name="cancel">Cancel</string>
    <string name="deleting">Deleting</string>
    <string name="delete_composition_success">Song \"%1$s\" deleted</string>
    <string name="search">Search</string>
    <string name="play_queue">Play queue</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="play_all">Play all</string>
    <string name="repeat_playlist">Repeat play queue</string>
    <string name="repeat_composition">Repeat song</string>
    <string name="do_not_repeat">Do not repeat</string>
    <string name="delete_from_queue">Delete from play queue</string>
    <string name="delete_from_play_list">Delete from playlist</string>
    <string name="add_item_to_playlist_error_template">Can not add song to playlist: %1$s</string>
    <string name="delete_from_playlist_success_template">Song \"%1$s\" deleted from playlist \"%2$s\"</string>
    <string name="delete_playlist_template">Delete playlist \"%1$s\"?</string>
    <string name="play_list_delete_error">Can not delete playlist: %1$s </string>
    <string name="play_not_exists">Playlist don\'t exists</string>
    <string name="play_list_deleted">Playlist \"%1$s\" was deleted</string>
    <string name="can_not_receive_file_for_send">Can\'t receive files for send: %1$s</string>
    <string name="position_template">Current play time: %1$s</string>
    <string name="now_playing_template">Now playing: %1$s. Open play queue.</string>
    <string name="play_all_in_folder">Play all in folder</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="storage_timeout_error_message">Device media storage is not responding.\nThis is a really strange and rare issue.\nTry to reboot the device, perhaps it will solve this problem.</string>
    <string name="select_all">Select all</string>
    <string name="file_uri_extract_error">Can\'t get system path for song \"%s\" to send.\nPossible it is in private system folder.</string>
    <string name="loading_progress">Loading…</string>
    <string name="alphabetical_order_desc_title">Z - A</string>
    <string name="add_date_order_desc_title">Later first</string>
    <string name="play_action">Play</string>
    <string name="play_next">Play next</string>
    <string name="add_to_play_queue">Add to queue</string>
    <string name="edit_name">Rename</string>
    <string name="change">Change</string>
    <string name="no_current_composition">No current song</string>
    <string name="show_covers">Show covers</string>
    <string name="show_covers_in_notification">Show covers in notification</string>
    <string name="colored_notification">Color notification in cover colors</string>
    <string name="display">Display</string>
    <string name="decrease_volume_on_notification">Decrease volume when notification is received</string>
    <string name="playing">Player</string>
    <string name="error_channel_description">Playing error notifications</string>
    <string name="playing_error">Play error</string>
    <string name="no_file_permission">No file permission</string>
    <string name="about_app">About</string>
    <string name="version_template">Version %1$s(Build %2$d)</string>
    <string name="theme">Theme</string>
    <string name="dark_theme">Dark</string>
    <string name="edit">Edit</string>
    <string name="edit_tags">Edit tags</string>
    <string name="change_author_name">Change artist</string>
    <string name="change_title">Change title</string>
    <string name="title">Title</string>
    <string name="filename">File name</string>
    <string name="artist">Artist</string>
    <string name="change_file_name">Change file name</string>
    <string name="copied_message">Text copied</string>
    <string name="folder_name">Folder name</string>
    <string name="rename_folder">Rename folder</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="paste_in_new_folder">Paste in new folder</string>
    <string name="move_in_the_same_folder_error">Target and source folder matches</string>
    <string name="file_already_exists">File with this name already exists</string>
    <string name="new_folder">New folder</string>
    <string name="play_on_connect_bluetooth_device">Start playing when bluetooth device is connected</string>
    <string name="headset">Headset</string>
    <string name="scan_storage">Rescan media storage</string>
    <string name="auto_night_mode">Auto night mode</string>
    <string name="unsupported_format_hint">Unsupported format</string>
    <string name="artists">Artists</string>
    <string name="no_artists_in_library">No artists in library</string>
    <string name="albums">Albums</string>
    <string name="no_albums_in_library">No albums in library</string>
    <string name="genres">Genres</string>
    <string name="no_genres_in_library">No genres in library</string>
    <string name="no_items_in_genre">No songs in selected genre</string>
    <string name="no_compositions">No songs</string>
    <string name="change_album_name">Change album</string>
    <string name="album">Album</string>
    <string name="genre">Genre</string>
    <string name="change_composition_genre">Change song genre</string>
    <string name="change_name">Change name</string>
    <string name="rename_progress">Renaming…</string>
    <string name="album_artist">Album artist</string>
    <string name="change_album_artist">Change album artist</string>
    <string name="edit_album_tags">Edit album tags</string>
    <string name="by_composition_count">By song count</string>
    <string name="by_duration">By duration</string>
    <string name="longest_first">Longest first</string>
    <string name="more_first">More first</string>
    <string name="artist_already_exists">Artist with this name already exists</string>
    <string name="album_already_exists">Album with this name already exists</string>
    <string name="genre_already_exists">Genre with this name already exists</string>
    <string name="remove_genre">Remove genre</string>
    <string name="add_composition_genre">Add genre</string>
    <string name="add">Add</string>
    <string name="edit_genre">Edit genre</string>
    <string name="genre_removed_message">Genre \"%s\" was removed</string>
    <string name="exclude_from_scanning">Hide</string>
    <string name="ignored_folder_added">Folder \'%s\' added to excluded folder list</string>
    <string name="excluded_folders">Excluded folders</string>
    <string name="remove_excluded_folder">Remove excluded folder</string>
    <string name="ignored_folder_removed">Excluded folder removed</string>
    <string name="moving_and_destination_folders_matches">Moving and destination folders matches</string>
    <string name="folder_with_this_name_already_exists_in_dest_folder">Folder with this name already exists in target folder</string>
    <string name="move_progress">Moving…</string>
    <string name="delete_progress">Deleting…</string>
    <string name="play_next_message_single">Song \"%s\" will be played next</string>
    <string name="added_to_queue_message_single">Song \"%s\" added to end of play queue</string>
    <string name="queue_item_removed">Queue item removed</string>
    <string name="by_size">By size</string>
    <string name="largest_first">Largest first</string>
    <string name="log_info_text">Some non-fatal errors occurred and info about them recorded into log file. Application doesn\'t send logs automatically, but you can send them manually. That will help improve app quality. Current log file size: %d kB</string>
    <string name="view_file">View file</string>
    <string name="send_file">Send file</string>
    <string name="delete_file">Delete file</string>
    <string name="log_file_deleted">Log file deleted</string>
    <string name="pick_email_app_to_send">Pick a email app to send</string>
    <string name="clear_play_queue">Clear play queue</string>
    <string name="no_excluded_folders">Folders excluded from scanning will appear here</string>
    <string name="keep_playing_after_window_close">Keep playing after window closing</string>
    <string name="equalizer">Equalizer</string>
    <string name="show_error_report_dialog_on_start">Show error report dialog on application start after app crashes</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="scan_storage_description">Usually all changes with files on the device will appear automatically. But on some devices or system builds it won\'t work. This button runs files scan manually.</string>
    <string name="follow_system_theme">Follow system theme</string>
    <string name="show_in_folders">Show in folders</string>
    <string name="export_playlist">Save as .m3u file</string>
    <string name="covers_shape">Covers shape</string>
    <string name="playlist_duplicates_description">Some songs already are in the playlist \'%1$s\'. \nAdd them anyway?</string>
    <string name="check_for_duplicates">Check playlist for duplicates before adding new songs</string>
    <string name="add_without_duplicates">Add without duplicates</string>
</resources>