<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_play"
        android:icon="@drawable/ic_play"
        android:title="@string/play_action"
        app:iconTint="?android:attr/textColorPrimary"/>

    <item android:id="@+id/menu_play_next"
        android:icon="@drawable/ic_play_next"
        android:title="@string/play_next"
        app:iconTint="?android:attr/textColorPrimary"/>

    <item android:id="@+id/menu_add_to_queue"
        android:icon="@drawable/ic_add_to_queue"
        android:title="@string/add_to_play_queue"
        app:iconTint="?android:attr/textColorPrimary"/>

    <item android:id="@+id/menu_add_to_playlist"
        android:icon="@drawable/ic_playlist_plus"
        android:title="@string/add_to_playlist"
        app:iconTint="?android:attr/textColorPrimary"/>

    <item android:id="@+id/menu_change_play_list_name"
        android:title="@string/edit_name"
        android:icon="@drawable/ic_playlist_edit"
        app:iconTint="?android:attr/textColorPrimary"/>

    <item android:id="@+id/menu_export_playlist"
        android:title="@string/export_playlist"
        android:icon="@drawable/ic_save"
        app:iconTint="?android:attr/textColorPrimary"/>

    <item android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_variant"
        android:title="@string/share"
        app:iconTint="?attr/actionModeTextColor"/>

    <item android:id="@+id/menu_delete_play_list"
        android:title="@string/delete_playlist"
        android:icon="@drawable/ic_delete_outline"
        app:iconTint="?android:attr/textColorPrimary"/>

</menu>