<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_add_to_playlist"
        android:title="@string/add_to_playlist"
        android:icon="@drawable/ic_playlist_plus"/>
    <item android:id="@+id/menu_edit"
        android:title="@string/edit_tags"
        android:icon="@drawable/ic_circle_edit_outline"/>
    <item android:id="@+id/menu_show_in_folders"
        android:title="@string/show_in_folders"
        android:icon="@drawable/ic_show_in_folders"/>
    <item android:id="@+id/menu_share"
        android:title="@string/share"
        android:icon="@drawable/ic_share_variant"/>
    <item android:id="@+id/menu_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_outline"/>
</menu>