<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_save_as_playlist"
        android:title="@string/save_as_play_list"
        android:icon="@drawable/ic_playlist_plus"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_sleep_timer"
        android:icon="@drawable/ic_timer"
        android:title="@string/sleep_timer"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_equalizer"
        android:title="@string/equalizer"
        android:icon="@drawable/ic_equalizer"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_clear_play_queue"
        android:title="@string/clear_play_queue"
        android:icon="@drawable/ic_clear_all"
        app:showAsAction="never"/>

</menu>