<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBox
        style="@style/CheckboxStyle"
        android:id="@+id/cbShowReportDialogOnStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/show_error_report_dialog_on_start"
        android:layout_marginEnd="@dimen/content_horizontal_margin"
        android:layout_marginStart="@dimen/content_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btnView"
        style="@style/ButtonBorderlessStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_file"
        android:layout_marginEnd="@dimen/content_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/cbShowReportDialogOnStart"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnSend"
        style="@style/ButtonBorderlessStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_file"
        android:layout_marginTop="@dimen/content_vertical_margin"
        android:layout_marginEnd="@dimen/content_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/btnView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnDelete"
        style="@style/ButtonBorderlessStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_file"
        android:layout_marginStart="@dimen/content_horizontal_margin"
        android:layout_marginEnd="@dimen/content_horizontal_margin"
        android:layout_marginTop="@dimen/content_vertical_margin"
        android:layout_marginBottom="@dimen/content_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/btnSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btnClose"
        style="@style/ButtonBorderlessStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:layout_marginStart="@dimen/content_horizontal_margin"
        android:layout_marginEnd="@dimen/content_horizontal_margin"
        android:layout_marginBottom="@dimen/content_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/cbShowReportDialogOnStart"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>