<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="ifContentScrolls"
        android:background="?android:attr/colorBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvThemes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                android:background="?android:attr/colorBackground"
                android:paddingHorizontal="@dimen/list_horizontal_margin"
                android:clipToPadding="false"/>

            <View
                style="@style/Divider.Horizontal"
                android:layout_marginStart="@dimen/content_horizontal_margin"/>

            <CheckBox
                style="@style/CheckboxStyle"
                android:id="@+id/cb_auto_night_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto_night_mode"
                android:layout_marginTop="@dimen/content_spacing_margin"
                android:layout_marginHorizontal="@dimen/content_horizontal_margin"/>

            <CheckBox
                style="@style/CheckboxStyle"
                android:id="@+id/cbFollowSystemTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/follow_system_theme"
                android:layout_marginHorizontal="@dimen/content_horizontal_margin"/>

            <View
                style="@style/Divider.Horizontal"
                android:layout_marginStart="@dimen/content_horizontal_margin"/>

            <TextView
                style="@style/TextStyle.Medium"
                android:id="@+id/tvSoundBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/toolbar_content_start"
                android:paddingEnd="@dimen/content_horizontal_margin"
                android:paddingTop="@dimen/content_vertical_margin"
                android:text="@string/covers_shape"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="@dimen/content_internal_margin"
                android:layout_marginStart="@dimen/toolbar_content_start"
                android:layout_marginEnd="@dimen/content_horizontal_margin">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivCircle"
                    style="@style/ImageStyle"
                    android:src="?attr/colorAccent"
                    app:shapeAppearance="@style/ShapeAppearance.CircleImageView"/>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivRectangle"
                    style="@style/ImageStyle"
                    android:src="?attr/colorAccent"
                    android:layout_marginStart="@dimen/content_internal_margin"
                    app:shapeAppearance="@style/ShapeAppearance.RectangleImageView"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>
